Final da tabela de celulares

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header class="o-header">
         <nav class="navmenu__principal">
-            <h1><a href="#">H<span>!</span>DE</a></h1>
+            <h1><a href="index.html">H<span>!</span>DE</a></h1>
 
             <ul class="flex__nav">
-                <li><a href="#">Troca de telas</a></li>
+                <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Endereço</a></li>
@@ -195,7 +195,7 @@
         </main>
         <footer>
 
-            <p>Desde 2018 servido com excelência - (67)99326 - 0926</p>
+            <p>Desde 2018 servindo com excelência - (67)99326 - 0926</p>
             <div>
                 <a href="https://www.instagram.com/hideeletronicosecia/" target="_blank">
                     <img src="assets/insta.png" alt="instagram da hide">
