Melhorias no index

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                 </ul>
             </section>
             <section class="o-section2">
-                <img src="assets/imagens/xiaomi.jpg" alt="" class="bannerxiaomi">
-
+                
+                <img src="assets/imagens/bannerxiaomi1.jpg" alt="" class="bannerxiaomi">
+                <h3><span class="aqui">Xiaomi</span> você encontra aqui</h3>
                 <ul class="celularesxiaomi">
                     <li>
                         <a href="https://api.whatsapp.com/send?phone=5567993260926&text=Compre agora mesmo, Poco X3 Pró" target="_blank">
