--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <header class="o-header">
         <nav class="navmenu__principal">
-            <h1><a href="index.html">H<span>!</span>DE</a></h1>
-
+            <h1><a href="index.html">H<span>!</span>DE </a></h1>
+            
+            <!--<p class="eletronics">Eletrônics</p>  -->
+            
             <ul class="flex__nav">
                 <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
                 <li><a href="#">Sobre</a></li>
