animação da motinha

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
         <main class="main__total">
             <section class="o-section1">
+                <div id="carrosel">Entrega Gratuita <img src="assets/imagens/entrega.png" alt=""></div>
                 <h2>Que tal um Produtinho novo </h2>
                 <ul class="listaDeProdutos1">
                     <li>
