Site quase finalizado.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             
             <ul class="flex__nav">
                 <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Endereço</a></li>
+                <li><a href="sobre-endereco.html">Sobre nós</a></li>
+                <li><a href="#">Celulares</a></li>
+                
             </ul>
         </nav>
     </header>
