--- a/troca-de-tela-de-celulares.html
+++ b/troca-de-tela-de-celulares.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Loja Hide Eletrônicos</title>
+        <title>Troca de Tela</title>
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="shortcut icon" href="assets/imagens/favicon.ico" type="image/x-icon">
@@ -16,9 +16,9 @@
     
                 <ul class="flex__nav">
                     <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Endereço</a></li>
+                    <li><a href="sobre-endereco.html">Sobre nós</a></li>
+                    <li><a href="#">Celulares</a></li>
+                    
                 </ul>
             </nav>
         </header>
