span aviso previo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <main class="main__total">
             <section class="o-section1">
                 <div id="carrosel">Entrega Gratuita <img src="assets/imagens/entrega.png" alt=""></div>
-                <h2>Que tal um Produtinho novo </h2>
+                <h2>Que tal um Produtinho novo<br><span class="avisopreviso">Valores sujeitos alteração sem aviso prévio</span></h2>
+
                 <ul class="listaDeProdutos1">
                     <li>
                         <a href="https://api.whatsapp.com/send?phone=5567993260926&text=Olá, bem vindo a loja Hide eletrônicos, qual produto você gostaria de obter ?" target="_blank"><img class="imagemprodutos" src="produtos/tv box.jpg" alt="">
