--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="main__total">
             <section class="o-section1">
                 <div id="carrosel">Entrega Gratuita <img src="assets/imagens/entrega.png" alt=""></div>
-                <h2>Que tal um Produtinho novo<br><span class="avisopreviso">Valores sujeitos alteração sem aviso prévio</span></h2>
+                <h2>Que tal um Produtinho novo<br><span class="avisopreviso">Valores sujeitos a alteração sem aviso prévio</span></h2>
 
                 <ul class="listaDeProdutos1">
                     <li>
