aviso previo listas

--- a/troca-de-tela-de-celulares.html
+++ b/troca-de-tela-de-celulares.html
@@ -27,6 +27,7 @@
                 <article>
                     <h2>Tabela de consulta para troca de tela</h2>
                     <p>Todos os valores abaixo são de telas primeira linha, modelos originais são descritos no título de cada item.</p>
+                    <p class="avisopreviolista">Valores sujeitos a alteração sem aviso prévio</p>
                 </article>
                 <table class="tabelacell">
                     <thead>
