Corrigindo caminho url do menu

--- a/sobre-endereco.html
+++ b/sobre-endereco.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="shortcut icon" href="assets/imagens/favicon.ico" type="image/x-icon">
+        <script src="taxas.js"></script>
     </head>
 <body>
     <header class="o-header">
