--- a/troca-de-tela-de-celulares.html
+++ b/troca-de-tela-de-celulares.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="shortcut icon" href="assets/imagens/favicon.ico" type="image/x-icon">
+        <script src="taxas.js"></script>
     </head>
     <body>
         <header class="o-header">
@@ -17,7 +18,7 @@
                 <ul class="flex__nav">
                     <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
                     <li><a href="sobre-endereco.html">Sobre nós</a></li>
-                    <li><a href="#">Celulares</a></li>
+                    <li><a href="taxas.html">Taxas</a></li>
                     
                 </ul>
             </nav>
