Pagina de Celulares Xiaomi
90%

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="flex__nav">
                 <li><a href="troca-de-tela-de-celulares.html">Troca de telas</a></li>
                 <li><a href="sobre-endereco.html">Sobre nós</a></li>
+                <li><a href="celulares-xiaomi/mostruario-xiaomi.html">Celulares</a></li>
                 <li><a href="taxas.html">Taxas</a></li>
                 
             </ul>
